# BB4_parser

./: .coverage  .env  .env_sample  .gitignore  Readme.md  bot.py  parser.py  parser2.py  pyproject.toml  skypro_diplom.db  test_api.py  test_bot.py  test_database.py
database/: config.py  models.py
tests/: test_bot.py  test_operations.py
